[package]
name = "memory_jogger"
version = "0.1.0"
authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
# TODO: Set diesel and diesel_migrations to version once SQLite upsert support has been released
diesel = { git = "https://github.com/diesel-rs/diesel.git", rev = "fa826f0c97e1f47eef34f37cb5b60056855a2b9a", features = ["chrono"] }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel.git", rev = "fa826f0c97e1f47eef34f37cb5b60056855a2b9a" }
env_logger = "0.7.1"
log = "0.4.8"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
structopt = "0.3.11"
thiserror = "1.0.11"
tokio = { version = "0.2.21", features = ["macros"] }

[features]
default = ["postgres", "sqlite"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
