[package]
name = "memory_jogger"
version = "2.0.0"
authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/rgardner/memory-jogger"
repository = "https://github.com/rgardner/memory-jogger"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.13"
# TODO: Set diesel and diesel_migrations to version once SQLite upsert support has been released
diesel = { git = "https://github.com/diesel-rs/diesel.git", rev = "fa826f0c97e1f47eef34f37cb5b60056855a2b9a", features = ["chrono"] }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel.git", rev = "fa826f0c97e1f47eef34f37cb5b60056855a2b9a" }
env_logger = "0.7.1"
log = "0.4.8"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
structopt = "0.3.15"
thiserror = "1.0.20"
tokio = { version = "0.2.21", features = ["macros"] }
url = "2.1.1"

[features]
default = ["postgres", "sqlite"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
