[package]
name = "memory_jogger"
version = "2.0.0"
authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/rgardner/memory-jogger"
repository = "https://github.com/rgardner/memory-jogger"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
chrono = "0.4.19"
# TODO: Set diesel and diesel_migrations to version once SQLite upsert support has been released
diesel = { git = "https://github.com/diesel-rs/diesel.git", rev = "7e676025dd11fa5b50399a2dcf9887b37280abe6", features = ["chrono"] }
diesel_migrations = { git = "https://github.com/diesel-rs/diesel.git", rev = "7e676025dd11fa5b50399a2dcf9887b37280abe6" }
env_logger = "0.9.0"
log = "0.4.14"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
structopt = "0.3.26"
tokio = { version = "1.16.1", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"

[features]
default = ["sqlite"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
large_tests = []

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
cfg-if = "1.0.0"
escargot = "0.5.7"
lazy_static = "1.4.0"
predicates = "2.1.1"
