[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/rgardner/memory-jogger"
repository = "https://github.com/rgardner/memory-jogger"
license = "MIT OR Apache-2.0"
keywords = ["xtask"]
categories = ["development-tools::build-utils"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.18", features = ["derive", "env"] }
