[package]
name = "pocket_cleaner"
version = "0.1.0"
authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
edition = "2018"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0.1"
actix-rt = "1.0.0"
actix-web = { version = "2.0.0", features = ["openssl"] }
anyhow = "1.0.26"
chrono = "0.4.10"
env_logger = "0.7.1"
listenfd = "0.3.3"
log = "0.4.8"
openssl = "0.10.28"
openssl-probe = "0.1.2"
serde = "1.0.104"
serde_json = "1.0.48"
thiserror = "1.0.11"
url = "2.1.1"
