[package]
name = "pocket_cleaner"
version = "0.1.0"
authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
edition = "2018"
default-run = "pc_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "1.0.1"
actix-rt = "1.0.0"
actix-web = { version = "2.0.0", features = ["openssl"] }
chrono = "0.4.10"
diesel = { version = "1.4.2", features = ["postgres"] }
env_logger = "0.7.1"
listenfd = "0.3.3"
log = "0.4.8"
openssl = "0.10.20"
openssl-probe = "0.1.2"
serde = "1.0.104"
serde_json = "1.0.48"
thiserror = "1.0.11"
url = "2.1.1"
structopt = "0.3.11"
diesel_migrations = "1.4.0"
