[package]
name = "pocket_cleaner"
version = "0.1.0"
authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]
edition = "2018"
default-run = "pc_console"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.10"
diesel = { version = "1.4.2", features = ["chrono", "postgres"] }
diesel_migrations = "1.4.0"
env_logger = "0.7.1"
log = "0.4.8"
percent-encoding = "2.1.0"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
structopt = "0.3.11"
thiserror = "1.0.11"
tokio = { version = "0.2.21", features = ["macros"] }
url = "2.1.1"
