[package]
name = "mj_repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
crossterm = "0.23.2"
memory_jogger = { path = "../memory_jogger" }
structopt = "0.3.26"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "sync"] }
tui = "0.18.0"
unicode-width = "0.1.9"
