[package]
name = "mj_repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
crossterm = "0.23.2"
memory_jogger = { path = "../memory_jogger" }
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
structopt = "0.3.26"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
tui = "0.18.0"
unicode-width = "0.1.9"

[target.'cfg(target_vendor = "apple")'.dependencies]
tracing-oslog = "0.1.2"
