[tool.poetry]
name = "discussion_repl"
version = "0.1.0"
description = ""
authors = ["Bob Gardner <bob.hn.gardner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.scripts]
discussion_repl = "discussion_repl.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
